--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,11 @@ path = "src/bin/convert.rs"
 name = "blur"
 path = "src/bin/blur.rs"
 
+[[bin]]
+name = "brighten"
+path = "src/bin/brighten.rs"
+
+
 [lib]
 name = "stew_lib"
 path = "src/lib.rs"
