Convert stew to use combostew intermediate layer.
Previously stew (and sic) used pretty much the same intermediate code between
the image crate back-end and the front-ends (stew and sic).
Combostew is an atempt to combine these intermediate layers.

For this commit, code surgery was performed. All (let us hope not too many
complications will occur, shall we? =D) intermediate layer code was removed.
Additionally, a dependency on combostew was added (which currently contains that same
intermediate code, we just removed).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ output-test-images = []
 [dependencies]
 clap = "2.32.0"
 image = "0.21.0"
+combostew = { path = "../combostew"}
 
 [lib]
 name = "stew_lib"
