Change dependency on combostew from local path to crates.io.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ output-test-images = []
 [dependencies]
 clap = "2.32.0"
 image = "0.21.0"
-combostew = { path = "../combostew"}
+combostew = "0.1.0"
 
 [lib]
 name = "stew_lib"
