--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,10 @@ clap = "2.32.0"
 image = "0.21.0"
 combostew = "0.1.0"
 
+[dev-dependencies]
+tempfile = "3.0.7"
+
+
 [lib]
 name = "stew_lib"
 path = "src/lib.rs"
