--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,8 @@ output-test-images = []
 [dependencies]
 clap = "2.32.0"
 image = "0.21.0"
-combostew = "0.1.0"
+combostew = "0.2.0"
+combostew_cli = "0.1.0"
 
 [lib]
 name = "stew_lib"
